upload and create buttons added

--- a/src/Styles/model.css
+++ b/src/Styles/model.css
@@ -31,6 +31,7 @@ model-viewer {
     gap: var(--space-lg);
     flex-direction: row;
     margin: 10px;
+    min-height: 100vh;
 }
 
 .left_bar {
@@ -46,11 +47,16 @@ model-viewer {
     width: 50%;
 }
 
-.left-bar-head span{
+.left-bar-head-span{
     font-size: 80px;
     color: #15133C;
 }
 .left-bar-head h4{
     font-size: 20px;
     color: #EC994B;
+}
+
+.word_wrap{
+    width: 400px;
+    color: #73777B;
 }
