Added 3DBook Model(three.js)

--- a/src/Styles/model.css
+++ b/src/Styles/model.css
@@ -54,3 +54,7 @@ model-viewer {
     font-size: 20px;
     color: #EC994B;
 }
+.canvas_h canvas{
+    height: 100vh !important;
+    align-items: center;
+}
