--- a/src/Styles/model.css
+++ b/src/Styles/model.css
@@ -55,6 +55,11 @@ model-viewer {
     font-size: 20px;
     color: #EC994B;
 }
+
+.word_wrap{
+    width: 500px;
+}
+
 .canvas_h canvas{
     height: 100vh !important;
     align-items: center;
