--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -4,7 +4,7 @@
 }
 
 nav {
-    position: fixed;
+    position: absolute;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -18,6 +18,7 @@ nav {
     padding: var(--space-md);
     max-width: 1500px;
     margin-inline: auto;
+    z-index: 1;
 }
 
 nav a {
