--- a/src/Styles/create.css
+++ b/src/Styles/create.css
@@ -1,32 +1,107 @@
-.create{
+.create {
     margin: 10px 0px;
+
 }
 
-.create-desc{
+.create-desc {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
     text-align: center;
-    
+
 }
 
-.create-desc-body{
+.create-desc-body {
     width: 80rem;
     margin: 10px;
 }
 
-.create-form{
+.create-form {
     display: flex;
     justify-content: center;
     align-items: center;
     box-shadow: inset 3px 3px 6px 3px rgba(0, 0, 0, 0.3);
-    background-color: #EC994B;
-    height: 120px;
+    min-height: 40vh;
     width: 100%;
     margin: 10px 0;
+
 }
 
-/* .create-form button{
-    border: 1px solid;
-} */
+.create-form-r {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: inset 3px 3px 6px 3px rgba(0, 0, 0, 0.3);
+    min-height: 40vh;
+    width: 100%;
+    margin: 10px 0;
+    width: 100%;
+
+}
+
+input[type=file] {
+    width: 350px;
+    max-width: 100%;
+    color: #444;
+    padding: 5px;
+    background: #fff;
+    border-radius: 10px;
+    border: 1px solid #555;
+  }
+
+input[type=file]::file-selector-button {
+    margin-right: 20px;
+    border: none;
+    background: #084cdf;
+    padding: 10px 20px;
+    border-radius: 10px;
+    color: #fff;
+    cursor: pointer;
+    transition: background .2s ease-in-out;
+  }
+
+  input[type=file]::file-selector-button:hover {
+    background: #0d45a5;
+  }
+
+
+.drop-container {
+    position: relative;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 200px;
+    padding: 20px;
+    border-radius: 10px;
+    border: 2px dashed #555;
+    color: #444;
+    cursor: pointer;
+    transition: background .2s ease-in-out, border .2s ease-in-out;
+}
+
+.drop-container:hover {
+    background: #eee;
+    border-color: #111;
+}
+
+.drop-container:hover .drop-title {
+    color: #222;
+}
+
+.drop-title {
+    color: #444;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    transition: color .2s ease-in-out;
+}
+
+
+
+.create-form button{
+    padding: 0;
+}
