--- a/src/Styles/footer.css
+++ b/src/Styles/footer.css
@@ -42,7 +42,7 @@ hr{
 .footer-icon-right{
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: row-reverse;
     gap: 10px;
