[Feature]form added, image preview and upload click link handle

--- a/src/Styles/model.css
+++ b/src/Styles/model.css
@@ -32,6 +32,7 @@ model-viewer {
     flex-direction: row;
     margin: 10px;
     min-height: 80vh;
+    height: 90vh;
 }
 
 .left_bar {
@@ -61,6 +62,6 @@ model-viewer {
 }
 
 .canvas_h canvas{
-    height: 100vh !important;
+    height: 90vh !important;
     align-items: center;
 }
