--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -6,7 +6,7 @@
 nav {
     display: -webkit-box;
     display: -ms-flexbox;
-    position: absolute;
+    /* position: absolute; */
     left: 25px;
     display: flex;
     -webkit-box-pack: justify;
