--- a/src/Styles/create.css
+++ b/src/Styles/create.css
@@ -1,47 +1,5 @@
-.create {
-    margin: 10px 0px;
-
-}
-
-.create-desc {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    text-align: center;
-
-}
-
-.create-desc-body {
-    width: 80rem;
-    margin: 10px;
-}
-
-.create-form {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    box-shadow: inset 3px 3px 6px 3px rgba(0, 0, 0, 0.3);
-    min-height: 40vh;
-    width: 100%;
-    margin: 10px 0;
-
-}
-
-.create-form-r {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    box-shadow: inset 3px 3px 6px 3px rgba(0, 0, 0, 0.3);
-    min-height: 40vh;
-    width: 100%;
-    margin: 10px 0;
-    width: 100%;
-
-}
-
 input[type=file] {
+    min-height: 45px;
     width: 350px;
     max-width: 100%;
     color: #444;
@@ -55,7 +13,7 @@ input[type=file]::file-selector-button {
     margin-right: 20px;
     border: none;
     background: #084cdf;
-    padding: 10px 20px;
+    padding: 5px 10px;
     border-radius: 10px;
     color: #fff;
     cursor: pointer;
@@ -70,7 +28,7 @@ input[type=file]::file-selector-button {
 .drop-container {
     position: relative;
     display: flex;
-    gap: 10px;
+    gap: 5px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -84,8 +42,10 @@ input[type=file]::file-selector-button {
 }
 
 .drop-container:hover {
-    background: #eee;
+    background: #f8b77b;
     border-color: #111;
+    transform: scale(1.01); 
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1), 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
 .drop-container:hover .drop-title {
@@ -102,6 +62,3 @@ input[type=file]::file-selector-button {
 
 
 
-.create-form button{
-    padding: 0;
-}
