--- a/src/Styles/login.css
+++ b/src/Styles/login.css
@@ -124,7 +124,7 @@ form{
     left: -100%;
     height: 100%;
     width: 200%;
-    background: linear-gradient(to right,#ff4b28,#ff228c);
+    background: linear-gradient(to right,#ff4b28,#15133C);
     transform: translateX(0);
     transition: transform 0.6s ease-in-out;
 }
