--- a/src/Styles/nav.css
+++ b/src/Styles/nav.css
@@ -35,7 +35,6 @@ nav a:hover {
 .nav_list {
     border-radius: 10px;
     height: 50px;
-    width: 300px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -55,7 +54,7 @@ nav a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100px;
+    
 }
 
 .nav-list-1:hover {
@@ -65,7 +64,7 @@ nav a:hover {
     border-radius: 10px;
     color: #EC994B;
     height: 30px;
-    width: 100px;
+    scale: 1.05;
     /* background-color: #EC994B; */
 }
 
@@ -87,7 +86,8 @@ button {
 
 .btn-login:hover {
     border-color: transparent;
-    color: #15133C;
+    background-color: #EC994B;
+    color: white;
 }
 
 .nav-list-btn {
@@ -105,8 +105,7 @@ button {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    width: 50px;
-    margin: 1rem 2rem;
+    
     background-color: #ffffff;
     border-radius: 100px;
     -webkit-box-shadow: var(--box-shadow-1);
