--- a/src/Styles/model.css
+++ b/src/Styles/model.css
@@ -6,7 +6,7 @@
 /* https://colorhunt.co/palette/15133c73777bec994bf1eee9 */
 
 model-viewer {
-    width: 100%;
+    
     height: 600px;
     background-color: white;
 }
@@ -15,9 +15,6 @@ model-viewer {
     display: flex;
     display: -webkit-box;
     display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
     -ms-flex-item-align: center;
     -ms-grid-row-align: center;
     align-self: center;
@@ -30,22 +27,19 @@ model-viewer {
     -ms-flex-pack: center;
     justify-content: center;
     gap: var(--space-lg);
-    flex-direction: row;
     margin: 10px;
-    min-height: 80vh;
-    height: 90vh;
+    
 }
 
 .left_bar {
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 100vh;
     width: 50%;
 }
 
 .right_bar {
-    min-width: 100vh;
+    
     width: 50%;
 }
 
@@ -67,4 +61,10 @@ model-viewer {
 .canvas_h canvas {
     height: 90vh !important;
     align-items: center;
+}
+
+@media (max-width: 1280px) {
+    .right_bar {
+        min-width: 100vh;
+    }
 }
