--- a/src/Styles/model.css
+++ b/src/Styles/model.css
@@ -6,41 +6,13 @@
 /* https://colorhunt.co/palette/15133c73777bec994bf1eee9 */
 
 model-viewer {
-    
-    
     height: 600px;
     background-color: white;
 }
 
-.top_bar {
-    display: flex;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    -ms-flex-item-align: center;
-    -ms-grid-row-align: center;
-    align-self: center;
-    -ms-grid-column-align: center;
-    justify-self: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    gap: var(--space-lg);
-    margin: 10px;
-    
-}
 
-.left_bar {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
-}
 
 .right_bar {
-    
     width: 50%;
 }
 
@@ -56,7 +28,6 @@ model-viewer {
 
 .word_wrap {
     width: 600px;
-
 }
 
 .canvas_h canvas {
@@ -68,4 +39,10 @@ model-viewer {
     .right_bar {
         min-width: 100vh;
     }
+}
+@media (max-width: 680px) {
+    .right_bar {
+        min-width: 50vh;
+    }
+    
 }
