--- a/src/Styles/uploadForm.css
+++ b/src/Styles/uploadForm.css
@@ -1,7 +1,7 @@
 
 input[type=text] {
     min-height: 45px;
-    width: 350px;
+    width: 100%;
     max-width: 100%;
     color: #444;
     padding: 5px;
